# gitshield

./: .gitshield.toml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
gitshield/: claude.py  cli.py  config.py  db.py  engine.py  formatter.py  hook.py  models.py  monitor.py  notifier.py  patterns.py  scanner.py
tests/: conftest.py  test_claude.py  test_claude_install.py  test_cli.py  test_config.py  test_db.py  test_engine.py  test_formatter.py  test_monitor.py  test_notifier.py  test_scanner_unit.py
tests/fixtures/: secret_file.py
