[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitshield"
version = "0.2.0"
description = "Prevent accidental secret commits"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]

[project.scripts]
gitshield = "gitshield.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
