[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitshield"
version = "1.0.0"
description = "Secret scanner for developers + AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "bokiko"}]
keywords = ["security", "secrets", "scanner", "git", "claude", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
toml = ["tomli>=2.0; python_version < '3.11'"]
notify = ["resend>=0.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
gitshield = "gitshield.cli:main"
gitshield-claude-hook = "gitshield.hook:main"

[project.urls]
Homepage = "https://github.com/bokiko/gitshield"
Repository = "https://github.com/bokiko/gitshield"
Issues = "https://github.com/bokiko/gitshield/issues"

[tool.setuptools.packages.find]
include = ["gitshield*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
